<resources>
    <string name="app_name">Proyecto AAD</string>
    <string name="titulo">CONTACTOS</string>
    <string name="btVer">ver</string>
    <string name="tvOpciones">Selecciona extensión de archivo:</string>
    <string name="etExtension">.txt</string>
    <string name="tvUbicacion">Seleccione ubicación donde guardar el archivo:</string>
    <string name="rbInterno">Almacenamineto Interno</string>
    <string name="rbPrivado">Almacenamiento Privado</string>
    <string name="tvNombreArchivo">Nombre del archivo:</string>
    <string name="etNombreArchivo">nombre archivo</string>
    <string name="btGuardar">guardar</string>
    <string name="title_activity_settings">Settings</string>

    <string name="respSi">Sí</string>
    <string name="respNo">No</string>

    <string name="tituloLectura">Requisito para ver contactos</string>
    <string name="mensajeExplicacionLectura">Se necesita el permiso de lectura</string>

    <string name="ajusteExtension">Extenstión</string>
    <string name="razon">Se necesitan permisos!</string>

    <string name="tvUltimoFichero">Último archivo guardado:</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ajusteArchivoAnterior">Último archivo</string>
    <string name="tituloAjusteArchivoAnterior">Mostrar último archivo guardado</string>
    <string name="tituloAjusteExtension">Selecciona extensión por defecto</string>
    <string name="btLeer">leer</string>
    <string name="tvNombreLectura">Nombre archivo</string>
    <string name="tvTituloLectura">Introduzca el nombre del archivo a leer:</string>
    <string name="tvArchivos">Archivos disponibles:</string>
</resources>
