<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity"
    tools:ignore="Autofill">

    <TextView
        android:id="@+id/tvUbicacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvUbicacion"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgOpcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvUbicacion"
        app:layout_constraintTop_toBottomOf="@+id/tvUbicacion">

        <RadioButton
            android:id="@+id/rbPrivado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/rbPrivado" />

        <RadioButton
            android:id="@+id/rbInterno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbInterno" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvNombreArchivo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tvNombreArchivo"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgOpcion" />

    <EditText
        android:id="@+id/etNombreArchivo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/etNombreArchivo"
        android:inputType="textPersonName"
        android:textColorHint="#8D8B1649"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvNombreArchivo"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreArchivo" />

    <Button
        android:id="@+id/btGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/btGuardar"
        android:textColor="@color/colorTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreArchivo" />

    <TextView
        android:id="@+id/tvUltimoFichero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tvUltimoFichero"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/etNombreArchivo"
        app:layout_constraintTop_toBottomOf="@+id/btGuardar" />

    <TextView
        android:id="@+id/tvFicheroUltimo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvUltimoFichero"
        app:layout_constraintTop_toBottomOf="@+id/tvUltimoFichero" />

</androidx.constraintlayout.widget.ConstraintLayout>